--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -29,9 +29,9 @@
                 <tr th:each="ct : ${categoryList} ">
                     <td th:text="${ct.id}"></td>
                     <td th:text="${ct.name}"></td>
-                    <td><a class="btn btn-warning btn-sm" th:href="@{/views/categorias/editcategoria/}+${ct.id}" th:text="'Editar'"
+                    <td><a class="btn btn-warning btn-sm" th:href="@{/views/categories/edit/}+${ct.id}" th:text="'Edit'"
                             title="'Editar Registro'"></a>
-                        <a class="btn btn-danger btn-sm" th:href="@{/views/categorias/deletecategoria/}+${ct.id}" th:text="'Borrar'"
+                        <a class="btn btn-danger btn-sm" th:href="@{/views/categories/delete/}+${ct.id}" th:text="'Delete'"
                             title="'Borrar Registro'" onclick="return confirm('Seguro de eliminar registro ?');"></a>
                     </td>
                 </tr>
