--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,14 +4,14 @@
 <head th:replace ="~{plantilla/template :: head}">
     
 </head>
-<body>
+<body class="bg-dark">
     <header th:replace="~{plantilla/template :: header}"> 
 
     </header>
 
-    <div class="container">
-        <h3>Navbar With Dropdown</h3>
-        <p>This example adds a dropdown menu in the navbar.</p>
+    <div class="container text-white text-center">
+        <h3>Bienvenidos al Inicio</h3>
+        <p>Esta es mi primera pagina web con spring boot</p>
     </div>
 
     <footer th:replace="~{plantilla/template :: footer}">
