--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -5,17 +5,17 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <header th:replace="~{plantilla/template :: header}"> 
 
     </header>
 
-    <div class="container text-center">
+    <div class="container text-center text-white">
         <h1>Categories</h1>
 
         <a class="btn btn-primary btn-sm" th:href="@{/views/categories/addcategory}" th:text="'Add'" title="'Add category'"></a>
 
-        <table class="table">
+        <table class="table text-white">
 
             <thead>
                 <tr>
@@ -29,7 +29,7 @@
                 <tr th:each="ct : ${categoryList} ">
                     <td th:text="${ct.id}"></td>
                     <td th:text="${ct.name}"></td>
-                    <td><a class="btn btn-warning btn-sm" th:href="@{/views/categories/edit/}+${ct.id}" th:text="'Edit'"
+                    <td><a class="btn btn-warning btn-sm" th:href="@{/views/categories/details/}+${ct.id}" th:text="'Edit'"
                             title="'Editar Registro'"></a>
                         <a class="btn btn-danger btn-sm" th:href="@{/views/categories/delete/}+${ct.id}" th:text="'Delete'"
                             title="'Borrar Registro'" onclick="return confirm('Seguro de eliminar registro ?');"></a>
