--- a/src/main/resources/templates/plantilla/template.html
+++ b/src/main/resources/templates/plantilla/template.html
@@ -11,18 +11,18 @@
 
     <!-- Barra de navegacion -->
     <header th:fragment="header">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-sm bg-black navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Stockify</a>
+                <a class="navbar-brand" href="/">Stockify</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav active">
-                        <li class="nav-item "><a class="nav-link active" th:href="@{/index}">Inicio</a>
-                        </li>
-                        <li class="nav-item dropdown "><a class="nav-link dropdown-toggle active" href="#" role="button"
+                        <li class="nav-item"><a class="nav-link active" th:href="@{/index}">Inicio</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button"
                                 data-bs-toggle="dropdown">Management</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/views/categories/">Categories</a></li>
@@ -30,9 +30,8 @@
                                 <li><a class="dropdown-item" href="#">Products</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link active" href="#">Contact</a>
-                        </li>
-                        <li class="nav-item "><a class="nav-link active" href="#">About us...</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#">About us...</a></li>
                     </ul>
                 </div>
             </div>
