Name of variables updated

--- a/src/main/resources/templates/CategoryViews/Category.html
+++ b/src/main/resources/templates/CategoryViews/Category.html
@@ -13,7 +13,7 @@
     <div class="container text-center text-white">
         <h1>Categories</h1>
 
-        <a class="btn btn-primary btn-sm" th:href="@{/views/categories/addcategory}" th:text="'Add'" title="'Add category'"></a>
+        <a class="btn btn-primary btn-sm" th:href="@{/views/categories/add}" th:text="'Add'" title="'Add category'"></a>
 
         <table class="table text-white">
 
