Implantation of provider class

--- a/src/main/resources/templates/ProviderViews/Provider.html
+++ b/src/main/resources/templates/ProviderViews/Provider.html
@@ -11,27 +11,29 @@
     </header>
 
     <div class="container text-center text-white">
-        <h1>Categories</h1>
-
-        <a class="btn btn-success btn-sm" th:href="@{/views/categories/add}" th:text="'New category'" title="'Add category'"></a>
-
-        <table class="table text-white">
-
+        <h1>Providers</h1>
+        <a class="btn btn-success btn-sm" th:href="@{/views/providers/add}" th:text="'New Provider'" title="'Add provider'"></a>
+        
+        <table class="table text-white table-borderless">
             <thead>
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
+                    <th scope="col">Telephone</th>
+                    <th scope="col">Date init</th>
                     <th scope="col">Functions</th>
                 </tr>
             </thead>
 
             <tbody>
-                <tr th:each="ct : ${categoryList} ">
-                    <td th:text="${ct.id}"></td>
-                    <td th:text="${ct.name}"></td>
-                    <td><a class="btn btn-outline-warning btn-sm" th:href="@{/views/categories/details/}+${ct.id}" th:text="'Edit'"
+                <tr th:each="pv : ${providerList} ">
+                    <td th:text="${pv.id}"></td>
+                    <td th:text="${pv.name}"></td>
+                    <td th:text="${pv.telephone}"></td>
+                    <td th:text="${pv.dateInitialize}"></td>
+                    <td><a class="btn btn-outline-warning btn-sm" th:href="@{/views/providers/details/}+${pv.id}" th:text="'Edit'"
                             title="'Editar Registro'"></a>
-                        <a class="btn btn-outline-danger btn-sm" th:href="@{/views/categories/delete/}+${ct.id}" th:text="'Delete'"
+                        <a class="btn btn-outline-danger btn-sm" th:href="@{/views/providers/delete/}+${pv.id}" th:text="'Delete'"
                             title="'Borrar Registro'" onclick="return confirm('Seguro de eliminar registro ?');"></a>
                     </td>
                 </tr>
