--- a/src/main/resources/templates/plantilla/template.html
+++ b/src/main/resources/templates/plantilla/template.html
@@ -26,7 +26,7 @@
                                 data-bs-toggle="dropdown">Management</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/views/categories/">Categories</a></li>
-                                <li><a class="dropdown-item" href="#">Providers</a></li>
+                                <li><a class="dropdown-item" href="/views/providers/">Providers</a></li>
                                 <li><a class="dropdown-item" href="#">Products</a></li>
                             </ul>
                         </li>
