Implantation of product CRUD

--- a/src/main/resources/templates/plantilla/template.html
+++ b/src/main/resources/templates/plantilla/template.html
@@ -27,7 +27,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/views/categories/">Categories</a></li>
                                 <li><a class="dropdown-item" href="/views/providers/">Providers</a></li>
-                                <li><a class="dropdown-item" href="#">Products</a></li>
+                                <li><a class="dropdown-item" href="/views/products/">Products</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
