--- a/src/main/resources/templates/ProviderViews/ProviderUpd.html
+++ b/src/main/resources/templates/ProviderViews/ProviderUpd.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{plantilla/template :: head}">
+<head th:replace="~{Layout/template :: head}">
 
 </head>
 
 <body class="bg-dark">
-    <header th:replace="~{plantilla/template :: header}"> 
+    <header th:replace="~{Layout/template :: header}"> 
 
     </header>
 
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <footer th:replace="~{plantilla/template :: footer}">
+    <footer th:replace="~{Layout/template :: footer}">
 
     </footer>
 </body>
