--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace ="~{plantilla/template :: head}">
+<head th:replace ="~{Layout/template :: head}">
     
 </head>
 <body class="bg-dark">
-    <header th:replace="~{plantilla/template :: header}"> 
+    <header th:replace="~{Layout/template :: header}"> 
 
     </header>
 
@@ -14,7 +14,7 @@
         <p>Esta es mi primera pagina web con spring boot</p>
     </div>
 
-    <footer th:replace="~{plantilla/template :: footer}">
+    <footer th:replace="~{Layout/template :: footer}">
         
     </footer>
 
