--- a/src/main/resources/templates/LoginViews/Login.html
+++ b/src/main/resources/templates/LoginViews/Login.html
@@ -7,7 +7,7 @@
     <link href="/webjars/bootstrap/5.2.0/css/bootstrap.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="bg-dark">
 
     <!-- Barra de navegacion -->
     <header th:fragment="header">
@@ -21,15 +21,6 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav active">
                         <li class="nav-item"><a class="nav-link active" th:href="@{/index}">Inicio</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" role="button"
-                                data-bs-toggle="dropdown">Management</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/views/categories/">Categories</a></li>
-                                <li><a class="dropdown-item" href="/views/providers/">Providers</a></li>
-                                <li><a class="dropdown-item" href="/views/products/">Products</a></li>
-                            </ul>
-                        </li>
                         <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" href="#">About us...</a></li>
                     </ul>
@@ -39,12 +30,36 @@
     </header>
 
     <!-- Contenido -->
-    <div class="container"></div>
+    <div class="container">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-4 shadow p-4 mb-5 bg-black rounded">
+                <div class="card border border-success">
+                    <div class="card-header bg-black text-white text-center">
+                        <h4>Stockify</h4>
+                    </div>
+                    <div class="card-body bg-black">
+                        <form>
+                            <div class="form-group">
+                                <label for="username" class="text-white">Username:</label>
+                                <input type="text" class="form-control bg-dark text-white border border-success" id="username" placeholder="Enter username">
+                            </div>
+                            <div class="form-group col-md-6 mt-2">
+                                <label for="password" class="text-white">Password:</label>
+                                <input type="password" class="form-control bg-dark text-white border border-success" id="password" placeholder="Enter password">
+                            </div>
+                            <button type="submit" class="btn btn-outline-success mt-3">Login</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Pie de pagina -->
     <footer th:fragment="footer" class="text-center fixed-bottom">
         <div class="container">
-            <p>Copyright Diego Dominguez &copy; -2023</p>
+            <p class="text-white">Copyright Diego Dominguez &copy; -2023
+            </p>
         </div>
         <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
         <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
