Login added to the navbar and the login page is now working with the database and the user can login and logout with the navbar

--- a/src/main/resources/templates/Layout/template.html
+++ b/src/main/resources/templates/Layout/template.html
@@ -24,33 +24,77 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" href="#" role="button"
                                 data-bs-toggle="dropdown">Management</a>
-                            <ul class="dropdown-menu">
+
+                            <ul class="dropdown-menu text-center">
                                 <li><a class="dropdown-item" href="/views/categories/">Categories</a></li>
                                 <li><a class="dropdown-item" href="/views/providers/">Providers</a></li>
                                 <li><a class="dropdown-item" href="/views/products/">Products</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#">About us...</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle active" href="#" role="button"
+                                        data-bs-toggle="dropdown">Users</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/">Register user</a></li>
+                                        <li><a class="dropdown-item" href="/">users</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
+                                <li class="nav-item"><a class="nav-link active" href="#">About us...</a></li>
+                            </ul>
+                        </div>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a class="nav-link dropdown-toggle active" href="#" role="button"
+                                        data-bs-toggle="dropdown">Usuario</a>
+                                <ul class="dropdown-menu dropdown-menu-end bg-black border text-center">
+                                    <li><a href="#">Profile</a></li>
+                                    <li><a href="#">Settings</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="/logout">Logout</a></li>
+                                </ul>
+                            </li>
+                                        </ul>
+                                    </div>
+                                </nav>
+                            </header>
 
-    <!-- Contenido -->
-    <div class="container"></div>
+                            <!-- Contenido -->
+                            <div class="container"></div>
 
-    <!-- Pie de pagina -->
-    <footer th:fragment="footer" class="text-center fixed-bottom">
-        <div class="container">
-            <p>Copyright Diego Dominguez &copy; -2023</p>
-        </div>
-        <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
-        <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
-        <script src="/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
-    </footer>
+                            <!-- Pie de pagina -->
+                            <footer th:fragment="footer" class="text-center fixed-bottom">
+                                <div class="container">
+                                    <p style="color:white;">Copyright Diego Dominguez &copy; -2023</p>
+                                </div>
+                                <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
+                                <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
+                                <script src="/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+                            </footer>
 
-</body>
+                        </body>
 
-</html>
+                        </html>
+                                            
+                                        </ul>
+                                    </div>
+                                </nav>
+                            </header>
+
+                            <!-- Contenido -->
+                            <div class="container"></div>
+
+                            <!-- Pie de pagina -->
+                            <footer th:fragment="footer" class="text-center fixed-bottom">
+                                <div class="container">
+                                    <p style="color:white;">Copyright Diego Dominguez &copy; -2023
+                                    </p>
+                                </div>
+                                <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
+                                <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
+                                <script src="/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+                            </footer>
+
+                        </body>
+
+                        </html>
