--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
     </header>
 
-    <div class="container text-white text-center">
+    <div class="container text-white text-center" style="margin-top: 40vh;">
         <h3>Bienvenidos al Inicio</h3>
         <p>Esta es mi primera pagina web con spring boot</p>
     </div>
