Inplantation of Venta and Client classes and controllers and views for them and their services and repositories and html files for them and the changes in the template.html file

--- a/src/main/resources/templates/Layout/template.html
+++ b/src/main/resources/templates/Layout/template.html
@@ -26,17 +26,19 @@
                                 data-bs-toggle="dropdown">Management</a>
 
                             <ul class="dropdown-menu text-center">
-                                <li><a class="dropdown-item" href="/views/categories/">Categories</a></li>
-                                <li><a class="dropdown-item" href="/views/providers/">Providers</a></li>
-                                <li><a class="dropdown-item" href="/views/products/">Products</a></li>
+                                <li><a class="dropdown-item" href="/views/categories/">Categorias</a></li>
+                                <li><a class="dropdown-item" href="/views/providers/">Proveedores</a></li>
+                                <li><a class="dropdown-item" href="/views/products/">Productos</a></li>
+                                <li><a class="dropdown-item" href="/views/clients/">Clientes</a></li>
                             </ul>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle active" href="#" role="button"
-                                        data-bs-toggle="dropdown">Users</a>
+                                        data-bs-toggle="dropdown">Registrar</a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="/">Register user</a></li>
-                                        <li><a class="dropdown-item" href="/">users</a></li>
+                                        <li><a class="dropdown-item" href="/views/venta/">Venta</a></li>
+                                        <li><a class="dropdown-item" href="/views/clients/form">Cliente</a></li>
+                                        <li><a class="dropdown-item" href="">Reporte</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
