--- a/src/main/resources/templates/Layout/template.html
+++ b/src/main/resources/templates/Layout/template.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <title>Layout</title>
     <link href="/webjars/bootstrap/5.2.0/css/bootstrap.css" rel="stylesheet" />
+    <style>
+        body {
+            background-image: url('static/img/background.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            /* Otras propiedades CSS, si es necesario */
+        }
+    </style>
 </head>
 
 <body>
@@ -31,72 +39,78 @@
                                 <li><a class="dropdown-item" href="/views/products/">Productos</a></li>
                                 <li><a class="dropdown-item" href="/views/clients/">Clientes</a></li>
                             </ul>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle active" href="#" role="button"
-                                        data-bs-toggle="dropdown">Registrar</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="/views/venta/">Venta</a></li>
-                                        <li><a class="dropdown-item" href="/views/clients/form">Cliente</a></li>
-                                        <li><a class="dropdown-item" href="">Reporte</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
-                                <li class="nav-item"><a class="nav-link active" href="#">About us...</a></li>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button"
+                                data-bs-toggle="dropdown">Registrar</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/views/venta/">Venta</a></li>
+                                <li><a class="dropdown-item" href="/views/clients/form">Cliente</a></li>
                             </ul>
-                        </div>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                                <a class="nav-link dropdown-toggle active" href="#" role="button"
-                                        data-bs-toggle="dropdown">Usuario</a>
-                                <ul class="dropdown-menu dropdown-menu-end bg-black border text-center">
-                                    <li><a href="#">Profile</a></li>
-                                    <li><a href="#">Settings</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="/logout">Logout</a></li>
-                                </ul>
-                            </li>
-                                        </ul>
-                                    </div>
-                                </nav>
-                            </header>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button"
+                                data-bs-toggle="dropdown">Generar</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/views/venta/list">Reporte Venta</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#">About us...</a></li>
+                    </ul>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button"
+                            data-bs-toggle="dropdown">Usuario</a>
+                        <ul class="dropdown-menu dropdown-menu-end bg-black border text-center">
+                            <li><a href="#">Profile</a></li>
+                            <li><a href="#">Settings</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/logout">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-                            <!-- Contenido -->
-                            <div class="container"></div>
+    <!-- Contenido -->
+    <div class="container"></div>
 
-                            <!-- Pie de pagina -->
-                            <footer th:fragment="footer" class="text-center fixed-bottom">
-                                <div class="container">
-                                    <p style="color:white;">Copyright Diego Dominguez &copy; -2023</p>
-                                </div>
-                                <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
-                                <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
-                                <script src="/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
-                            </footer>
+    <!-- Pie de pagina -->
+    <footer th:fragment="footer" class="text-center fixed-bottom">
+        <div class="container">
+            <p style="color:white;">Copyright Diego Dominguez &copy; -2023</p>
+        </div>
+        <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
+        <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
+        <script src="/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+    </footer>
 
-                        </body>
+</body>
 
-                        </html>
-                                            
-                                        </ul>
-                                    </div>
-                                </nav>
-                            </header>
+</html>
 
-                            <!-- Contenido -->
-                            <div class="container"></div>
+</ul>
+</div>
+</nav>
+</header>
 
-                            <!-- Pie de pagina -->
-                            <footer th:fragment="footer" class="text-center fixed-bottom">
-                                <div class="container">
-                                    <p style="color:white;">Copyright Diego Dominguez &copy; -2023
-                                    </p>
-                                </div>
-                                <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
-                                <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
-                                <script src="/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
-                            </footer>
+<!-- Contenido -->
+<div class="container"></div>
 
-                        </body>
+<!-- Pie de pagina -->
+<footer th:fragment="footer" class="text-center fixed-bottom">
+    <div class="container">
+        <p style="color:white;">Copyright Diego Dominguez &copy; -2023
+        </p>
+    </div>
+    <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
+    <script src="/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+</footer>
 
-                        </html>
+</body>
+
+</html>
