--- a/src/main/resources/templates/VentaViews/ventaform.html
+++ b/src/main/resources/templates/VentaViews/ventaform.html
@@ -9,87 +9,75 @@
     <header th:replace="~{Layout/template :: header}"> 
 
     </header>
+    
+    <div class="container col-12 text-white">
+        
 
-    <!DOCTYPE html>
-<html lang="en">
-    <div class="container mt-4">
-        <h1>Registrar Venta</h1>
-        <form th:action="@{/registrar-venta}" method="post" th:object="${venta}">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="producto">Producto:</label>
-                        <select class="form-select" id="product" name="product" th:field="*{products}">
-                            <option th:each="product : ${products}" th:value="${product.id}" th:text="${product.name}"></option>
-                        </select>
+
+        <div style="display: inline-block;">
+            <form th:object="${cart}" th:action="@{/views/venta/addtocart}" method="post">
+                <div class="form-group mb-3">
+                    <div>
+                        <label for="id">Identificador de Producto</label>
+                        <input autofocus autocomplete="off" name="id" id="id"
+                                placeholder="Escribe el identificador del producto y presiona enter para agregarlo al carrito de compras"
+                                type="text" th:field="*{id}" class="form-control">
                     </div>
-                    <div class="form-group">
-                        <label for="cantidad">Cantidad:</label>
-                        <input type="number" class="form-control" id="cantidad" name="cantidad" th:field="*{cantidad}">
-                    </div>
-                    <div class="form-group">
-                        <label for="ci">Documento de Identidad (CI):</label>
-                        <input type="text" class="form-control" id="ci" name="ci" th:field="*{ci}">
-                    </div>
-                    <button type="button" class="btn btn-primary">Asignar Cliente</button>
-                    <button type="button" class="btn btn-primary">Registrar Cliente</button>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="precioUnitario">Precio Unitario:</label>
-                        <input type="text" class="form-control" id="precioUnitario" th:field="*{precioUnitario}" readonly>
+                    <div>
+                        <label for="cantidad">Cantidad: </label>
+                        <input type="number" th:field="*{quantity}" name="cantidad" id="cantidad" min="1" max="100" value="1" class="form-control">
                     </div>
                 </div>
+                <button type="submit" class="btn btn-primary">Agregar al carrito</button>
+            </form>
+        </div>
+    
+        <div style="display: inline-block; margin-left: 20px;">
+            <h1 th:text="${'Total: ' + ventaTotal}"></h1>
+            <form class="mb-2" th:action="@{/views/venta/save}" method="post">
+                <button type="submit" class="btn btn-success">Terminar&nbsp;<i class="fa fa-check"></i>
+                </button>
+                <a th:href="@{/views/venta/clean}" class="btn btn-danger">Cancelar venta&nbsp;<i class="fa fa-trash"></i>
+                </a>
+            </form>
+        </div>
+        
+        <h2>Carrito</h2>
+            <div class="table-responsive">
+                <table class="table table-bordered text-white">
+                    <thead>
+                        <tr>
+                            <th>Codigo</th>
+                            <th>Nombre</th>
+                            <th>Categoria</th>
+                            <th>Precio</th>
+                            <th>Cantidad</th>
+                            <th>Total</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="cartItem, itemStat : ${cartList}">
+                            <td th:text="${cartItem.id}"></td>
+                            <td th:text="${cartItem.name}"></td>
+                            <td th:text="${cartItem.category.name}"></td>
+                            <td th:text="${cartItem.cost}"></td>
+                            <td th:text="${cartItem.quantity}"></td>
+                            <td th:text="${cartItem.total}"></td>
+                            <td>
+                                <form th:action="@{/views/venta/removeitem}" method="post">
+                                    <input type="hidden" name="index" th:value="${itemStat.index}" />
+                                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <div class="mt-3">
-                <button type="button" class="btn btn-success" id="agregarProducto" th:onclick="agregarProducto()">Añadir a la Lista</button>
-            </div>
-        </form>
+
     </div>
     
-    <div class="container mt-4">
-        <h3>Lista de Productos:</h3>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Producto</th>
-                    <th>Cantidad</th>
-                    <th>Precio Unitario</th>
-                    <th>Precio Total</th>
-                </tr>
-            </thead>
-            <tbody id="productosList" th:each="producto : ${venta.productos}">
-                <tr>
-                    <td th:text="${producto.producto}"></td>
-                    <td th:text="${producto.cantidad}"></td>
-                    <td th:text="${producto.precioUnitario}"></td>
-                    <td th:text="${producto.precioTotal}"></td>
-                </tr>
-            </tbody>
-        </table>
-        <h4>Total Venta: <span id="totalVenta" th:text="${venta.totalVenta}"></span></h4>
-        <button type="button" class="btn btn-success" th:onclick="registrarVenta()">Registrar Venta</button>
-    </div>
-
-    <!-- Agrega los enlaces a los archivos de JavaScript para jQuery y Bootstrap si aún no lo has hecho -->
-    <script>
-        // Aquí puedes agregar tu script para calcular el precio unitario, el precio total, 
-        // agregar productos a la lista y calcular el total de la venta.
-    </script>
-</body>
-</html>
-
-
     
-    
-    
-    
-    
-    
-    
-    
-    
-
     <footer th:replace="~{Layout/template :: footer}">
 
     </footer>
