Actualizacion de la vista venta

--- a/src/main/resources/templates/Layout/template.html
+++ b/src/main/resources/templates/Layout/template.html
@@ -52,7 +52,7 @@
                             <a class="nav-link dropdown-toggle active" href="#" role="button"
                                 data-bs-toggle="dropdown">Generar</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/views/venta/list">Reporte Venta</a></li>
+                                <li><a class="dropdown-item" href="/views/reporteVenta/">Reporte Venta</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
