Implementacion de la entidad User y su respectivo repositorio, servicio y controlador para poder registrar usuarios en la base de datos y listarlos en una tabla.

--- a/src/main/resources/templates/Layout/template.html
+++ b/src/main/resources/templates/Layout/template.html
@@ -46,13 +46,14 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/views/venta/">Venta</a></li>
                                 <li><a class="dropdown-item" href="/views/clients/form">Cliente</a></li>
+                                <li><a class="dropdown-item" href="/views/user/form">Usuario</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" href="#" role="button"
-                                data-bs-toggle="dropdown">Generar</a>
+                                data-bs-toggle="dropdown">Historial</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/views/reporteVenta/">Reporte Venta</a></li>
+                                <li><a class="dropdown-item" href="/views/reporteVenta/">Venta</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
