--- a/src/main/resources/templates/ClientViews/clientform.html
+++ b/src/main/resources/templates/ClientViews/clientform.html
@@ -58,7 +58,7 @@
                     <div class="form-group row mt-3 mb-3">
                         <div class="col-md-4"></div>
                         <div class="col-md-8">
-                            <input type="submit" class="btn btn-primary btn-sm" value="Save" style="font-size: 14px;" />
+                            <input type="submit" class="btn btn-primary btn-sm" value="Guardar" style="font-size: 14px;" />
                         </div>
                     </div>
                 </form>
