--- a/src/main/resources/templates/Layout/template.html
+++ b/src/main/resources/templates/Layout/template.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link active" th:href="@{/index}">Inicio</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" href="#" role="button"
-                                data-bs-toggle="dropdown">Management</a>
+                                data-bs-toggle="dropdown">Mantenimiento</a>
 
                             <ul class="dropdown-menu text-center">
                                 <li><a class="dropdown-item" href="/views/categories/">Categorias</a></li>
@@ -56,8 +56,6 @@
                                 <li><a class="dropdown-item" href="/views/reporteVenta/">Venta</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#">About us...</a></li>
                     </ul>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
@@ -82,7 +80,7 @@
     <!-- Pie de pagina -->
     <footer th:fragment="footer" class="text-center fixed-bottom">
         <div class="container">
-            <p style="color:white;">Copyright Diego Dominguez &copy; -2023</p>
+            
         </div>
         <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
         <script type="text/javascript" src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
@@ -104,7 +102,7 @@
 <!-- Pie de pagina -->
 <footer th:fragment="footer" class="text-center fixed-bottom">
     <div class="container">
-        <p style="color:white;">Copyright Diego Dominguez &copy; -2023
+        <p style="color:white;">Copyright Diego Dominguez, Gustavo Vera y Aragón, Orlando Gonzalez &copy; -2023
         </p>
     </div>
     <script type="text/javascript" src="/webjars/jquery/3.6.1/jquery.min.js"></script>
