--- a/src/main/resources/templates/CategoryViews/CategoryForm.html
+++ b/src/main/resources/templates/CategoryViews/CategoryForm.html
@@ -16,15 +16,15 @@
             <div class="card-body">
                 <form th:action="@{/views/categories/save}" th:object="${category}" method="post">
                     <div class="form-group row mt-3 mb-3">
-                        <label class="col-md-4 text-white" for="name">Name: </label>
+                        <label class="col-md-4 text-white" for="name">Categoria: </label>
                         <div class="col-md-8">
-                            <input type="text" th:field="*{name}" class="form-control form-control-sm bg-white text-dark" id="name" placeholder="New category" style="font-size: 14px;">
+                            <input type="text" th:field="*{name}" class="form-control form-control-sm bg-white text-dark" id="name" placeholder="nueva categoria..." style="font-size: 14px;">
                         </div>
                     </div>
                     <div class="form-group row mt-3 mb-3">
                         <div class="col-md-4"></div>
                         <div class="col-md-8">
-                            <input type="submit" class="btn btn-primary btn-sm" value="Save" style="font-size: 14px;" />
+                            <input type="submit" class="btn btn-primary btn-sm" value="Guardar" style="font-size: 14px;" />
                         </div>
                     </div>
                 </form>
