--- a/src/main/resources/templates/ProviderViews/Provider.html
+++ b/src/main/resources/templates/ProviderViews/Provider.html
@@ -11,16 +11,16 @@
     </header>
 
     <div class="container text-center text-white">
-        <h1>Providers</h1>
-        <a class="btn btn-success btn-sm" th:href="@{/views/providers/add}" th:text="'New Provider'" title="'Add provider'"></a>
+        <h1>Proveedores</h1>
+        <a class="btn btn-success btn-sm" th:href="@{/views/providers/add}" th:text="'Nuevo Proveedor'" title="'Agregar Proveedor'"></a>
         
         <table class="table text-white table-borderless">
             <thead>
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Telephone</th>
-                    <th scope="col">Date init</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Telefono</th>
+                    <th scope="col">Fecha iniciado</th>
                     <th scope="col">Functions</th>
                 </tr>
             </thead>
@@ -31,9 +31,9 @@
                     <td th:text="${pv.name}"></td>
                     <td th:text="${pv.telephone}"></td>
                     <td th:text="${pv.dateInitialize}"></td>
-                    <td><a class="btn btn-outline-warning btn-sm" th:href="@{/views/providers/details/}+${pv.id}" th:text="'Edit'"
+                    <td><a class="btn btn-outline-warning btn-sm" th:href="@{/views/providers/details/}+${pv.id}" th:text="'Editar'"
                             title="'Editar Registro'"></a>
-                        <a class="btn btn-outline-danger btn-sm" th:href="@{/views/providers/delete/}+${pv.id}" th:text="'Delete'"
+                        <a class="btn btn-outline-danger btn-sm" th:href="@{/views/providers/delete/}+${pv.id}" th:text="'Eliminar'"
                             title="'Borrar Registro'" onclick="return confirm('Seguro de eliminar registro ?');"></a>
                     </td>
                 </tr>
