--- a/src/main/resources/templates/ProviderViews/ProviderForm.html
+++ b/src/main/resources/templates/ProviderViews/ProviderForm.html
@@ -16,19 +16,19 @@
             <div class="card-body">
                 <form th:action="@{/views/providers/save}" th:object="${provider}" method="post">
                     <div class="form-group row mt-3 mb-3">
-                        <label class="col-md-4 text-white" for="name">Name: </label>
+                        <label class="col-md-4 text-white" for="name">Nombre: </label>
                         <div class="col-md-6">
-                            <input type="text" th:field="*{name}" class="form-control form-control-sm bg-black text-white" id="name" placeholder="Name..." style="font-size: 14px;">
+                            <input type="text" th:field="*{name}" class="form-control form-control-sm bg-black text-white" id="name" placeholder="nombre..." style="font-size: 14px;">
                         </div>
-                        <label class="col-md-4 text-white" for="telephone">Telephone: </label>
+                        <label class="col-md-4 text-white" for="telephone">Telefono: </label>
                         <div class="col-md-6">
-                            <input type="text" th:field="*{telephone}" class="form-control form-control-sm bg-black text-white" id="telephone" placeholder="1234" style="font-size: 14px;">
+                            <input type="text" th:field="*{telephone}" class="form-control form-control-sm bg-black text-white" id="telephone" placeholder="0981111111" style="font-size: 14px;">
                         </div>
                     </div>
                     <div class="form-group row mt-3 mb-3">
                         <div class="col-md-4"></div>
                         <div class="col-md-8">
-                            <input type="submit" class="btn btn-outline-success btn-sm" value="Save" style="font-size: 14px;" />
+                            <input type="submit" class="btn btn-success btn-sm" value="Guardar" style="font-size: 14px;" />
                         </div>
                     </div>
                 </form>
